--- a/webscrap-tabletodataframe.ipynb
+++ b/webscrap-tabletodataframe.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "82bcd795",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -84,39 +84,69 @@
     }
    ],
    "source": [
+    "# Install the BeautifulSoup4 library if not already installed\n",
     "!pip install beautifulsoup4\n",
-    "from bs4 import BeautifulSoup\n",
-    "from urllib.request import urlopen\n",
-    "import pandas as pd\n",
     "\n",
+    "# Import necessary libraries\n",
+    "from bs4 import BeautifulSoup  # For parsing HTML and XML documents\n",
+    "from urllib.request import urlopen  # To fetch data from a URL\n",
+    "import pandas as pd  # For data manipulation and analysis\n",
+    "\n",
+    "# Define the URL of the target web page\n",
     "url_base = 'https://grg.org/Adams/C_files/sheet001.htm'\n",
-    "u = urlopen(url_base)\n",
-    "html = u.read()\n",
     "\n",
-    "# Try decoding with 'utf-8' and handle errors\n",
+    "# Open the URL and read its content\n",
+    "u = urlopen(url_base)\n",
+    "html = u.read()  # Read the HTML content of the page\n",
+    "\n",
+    "# Try decoding the HTML content using 'utf-8', handle potential decoding errors\n",
     "try:\n",
     "    decoded_html = html.decode('utf-8')\n",
     "except UnicodeDecodeError:\n",
-    "    # If 'utf-8' decoding fails, try a different encoding or skip problematic characters\n",
+    "    # If decoding with 'utf-8' fails, fall back to 'latin-1' encoding and replace problematic characters\n",
     "    decoded_html = html.decode('latin-1', errors='replace')\n",
     "\n",
+    "# Close the URL connection\n",
     "u.close()\n",
     "\n",
+    "# Parse the decoded HTML content using BeautifulSoup\n",
     "soup = BeautifulSoup(decoded_html, 'html.parser')\n",
-    "Table=soup.find(\"table\")\n",
-    "#print(Table.prettify)\n",
     "\n",
-    "columns = [\"Num\",\"Birthplace\",\"Name\",\"Born\",\"Died\",\"Age_Years\",\"Age_Days\",\"Race\",\"Sex\",\"Deathplace\",\"WhenOldest_Years_Range\",\"WhenOldestAge_Range\",\"Lenght_of_Region_Years\",\"Lenght_of_Region_Days\",\"Region_Lenghts_inYear\",\"Age_at_Accession_Years\",\"Age_at_Accession_Days\",\"Case added to GRG Tablee\",\"C1\",\"C2\",\"C3\",\"C4\"]\n",
+    "# Find the first table element in the HTML document\n",
+    "Table = soup.find(\"table\")\n",
+    "\n",
+    "# Optional: Uncomment to print a prettified version of the table's HTML\n",
+    "# print(Table.prettify)\n",
+    "\n",
+    "# Define column names for the DataFrame\n",
+    "columns = [\"Num\", \"Birthplace\", \"Name\", \"Born\", \"Died\", \"Age_Years\", \"Age_Days\", \"Race\", \"Sex\", \n",
+    "           \"Deathplace\", \"WhenOldest_Years_Range\", \"WhenOldestAge_Range\", \"Lenght_of_Region_Years\", \n",
+    "           \"Lenght_of_Region_Days\", \"Region_Lenghts_inYear\", \"Age_at_Accession_Years\", \n",
+    "           \"Age_at_Accession_Days\", \"Case added to GRG Tablee\", \"C1\", \"C2\", \"C3\", \"C4\"]\n",
+    "\n",
+    "# Initialize an empty list to store table data\n",
     "data = []\n",
+    "\n",
+    "# Loop through specific rows in the table (from row 8 to row 72, inclusive) to extract data\n",
     "for row in Table.find_all('tr')[8:73]:\n",
+    "    # Extract text from each table cell, strip whitespace, and append to row_data\n",
     "    row_data = [cell.text.strip() for cell in row.find_all('td')]\n",
-    "    data.append(row_data)\n",
-    "#print(data)\n",
-    "df = pd.DataFrame(data,columns=columns)\n",
-    "#print(df.head(10))\n",
-    "df=df.iloc[:,:18]\n",
-    "print (df.head(5))\n",
-    "df.to_csv('webscrape.csv')"
+    "    data.append(row_data)  # Add the row data to the data list\n",
+    "\n",
+    "# Create a DataFrame using the extracted data and specified column names\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "\n",
+    "# Optional: Uncomment to preview the first 10 rows of the DataFrame\n",
+    "# print(df.head(10))\n",
+    "\n",
+    "# Slice the DataFrame to keep only the first 18 columns\n",
+    "df = df.iloc[:, :18]\n",
+    "\n",
+    "# Print the first 5 rows of the DataFrame to verify the output\n",
+    "print(df.head(5))\n",
+    "\n",
+    "# Save the DataFrame to a CSV file named 'webscrape.csv'\n",
+    "df.to_csv('webscrape.csv')\n"
    ]
   }
  ],
